Week4/Week4_HW_이정민/fail/clone/app/src/main/java/com/example/ljmpr/clone/Friends.java
package com.example.ljmpr.clone;

import android.support.v4.app.Fragment;

public class Friends extends Fragment {

    public Friends() {

    }
}
